Add ebuild of apache-servicemix-6.1.0